# cobalt

./: .gitmodules  CMakeLists.txt  README.md  main.cpp
core/: CMakeLists.txt
core/camera/: camera.cpp  camera.hpp
core/components/: transform.h
core/indexbuffer/: indexbuffer.cpp  indexbuffer.h
core/mesh/: mesh.cpp  mesh.hpp
core/model/: model.cpp  model.hpp
core/renderer/: indexbuffer.h  renderer.cpp  renderer.h  shader.cpp  shader.h  vertexbuffer.h
core/shader/: shader.cpp  shader.h  shader.hpp
core/texture/: texture.cpp  texture.h
core/vertexbuffer/: vertexarray.cpp  vertexarray.h  vertexbuffer.cpp  vertexbuffer.h  vertexlayout.h
core/vertexlayout/: vertexlayout.cpp  vertexlayout.h
core/window/: window.cpp  window.h  window.hpp
objects/backpack/: backpack.gltf
objects/primitives/: cube.gltf
res/objects/backpack/: backpack.gltf
res/shaders/: basic.frag  basic.vert  phong.frag  phong.vert
shaders/: frag.glsl  light.frag  phong.vert
