add_library(core
    indexbuffer/indexbuffer.h
    indexbuffer/indexbuffer.cpp
    renderer/renderer.h
    renderer/renderer.cpp
    shader/shader.h
    shader/shader.cpp
    texture/texture.h
    texture/texture.cpp
    vertexarray/vertexarray.h
    vertexarray/vertexarray.cpp
    vertexbuffer/vertexbuffer.h
    vertexbuffer/vertexbuffer.cpp
    vertexlayout/vertexlayout.h
    vertexlayout/vertexlayout.cpp
    window/window.h
    window/window.cpp
    components/transform.h
)

target_include_directories(core PUBLIC
    indexbuffer
    renderer
    shader
    texture
    vertexarray
    vertexbuffer
    vertexlayout
    window
    components
)

target_link_libraries(core
    PRIVATE
        glad
        glfw
        glm::glm
        stb
)